--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,8 @@
         "@nestjs/platform-express": "^11.0.1",
         "@nestjs/platform-socket.io": "^11.1.8",
         "@nestjs/websockets": "^11.1.8",
-        "@prisma/client": "^6.18.0",
+        "@prisma/adapter-pg": "^7.1.0",
+        "@prisma/client": "^6.19.0",
         "bcrypt": "^6.0.0",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
@@ -38,6 +39,7 @@
         "dotenv": "^17.2.3",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
+        "pg": "^8.16.3",
         "reflect-metadata": "^0.2.2",
         "rxjs": "^7.8.1",
         "socket.io": "^4.8.1"
@@ -61,7 +63,7 @@
         "globals": "^16.0.0",
         "jest": "^30.0.0",
         "prettier": "^3.4.2",
-        "prisma": "^6.18.0",
+        "prisma": "^7.1.0",
         "source-map-support": "^0.5.21",
         "supertest": "^7.0.0",
         "ts-jest": "^29.2.5",
