--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
         "cookie": "^1.0.2",
         "cookie-parser": "^1.4.7",
         "dotenv": "^17.2.3",
+        "ioredis": "^5.8.2",
         "passport": "^0.7.0",
         "passport-jwt": "^4.0.1",
         "pg": "^8.16.3",
